<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">CodeFind</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>

    <string name="title_activity_topic">Topics</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Content Descriptions -->
    <string name="app_logo">CodeFind</string>

    <!-- Strings related to Search on ActionBar -->
    <string name="search_hint">Type and Search</string>
    <string name="menu_search">Search</string>

    <!-- Strings related to Questions Enabled preference -->
    <string name="pref_enable_questions_key" translatable="false">enable_questions</string>
    <string name="pref_enable_questions_label">Question Feedback</string>
    <string name="pref_enable_questions_true">Show</string>
    <string name="pref_enable_questions_false">Dont Show</string>
    <string name="pref_enable_questions_default" translatable="false">true</string>

    <!-- Strings related to Comments Enabled preference -->
    <string name="pref_enable_comments_key" translatable="false">enable_comments</string>
    <string name="pref_enable_comments_label">Comment Feedback</string>
    <string name="pref_enable_comments_true">Show</string>
    <string name="pref_enable_comments_false">Dont Show</string>
    <string name="pref_enable_comments_default" translatable="false">true</string>

    <!-- Strings related to Cache Cleared preference -->
    <string name="pref_clear_cache_key" translatable="false">clear_cache</string>
    <string name="pref_clear_cache_label">Clear Cache</string>
    <string name="pref_clear_cache_desc">Online cached data</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Code Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">codefind.bazz_techtronics.com</string>
    <string name="content_authority">com.bazz_techtronics.codefind</string>

</resources>
