<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBoxPreference
        android:title="@string/pref_enable_questions_label"
        android:key="@string/pref_enable_questions_key"
        android:summaryOff="@string/pref_enable_questions_false"
        android:summaryOn="@string/pref_enable_questions_true"
        android:defaultValue="@string/pref_enable_questions_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_comments_label"
        android:key="@string/pref_enable_comments_key"
        android:summaryOff="@string/pref_enable_comments_false"
        android:summaryOn="@string/pref_enable_comments_true"
        android:defaultValue="@string/pref_enable_comments_default" />

    <Preference
        android:title="@string/pref_clear_cache_label"
        android:key="@string/pref_clear_cache_key"
        android:summary="@string/pref_clear_cache_desc"
        android:widgetLayout="@layout/pref_cache_button" />

</PreferenceScreen>